latencyStats for for time-series collections don't reflect inserts

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Hide
      db.createCollection("ts",{timeseries:{timeField:"ts"}})
      db.ts.insert({ts:new Date(), x:1})
      db.ts.aggregate([{$collStats:{latencyStats:{}}}]).next()
      
      Show
      db.createCollection("ts",{timeseries:{timeField:"ts"}}) db.ts.insert({ts:new Date(), x:1}) db.ts.aggregate([{$collStats:{latencyStats:{}}}]).next()
    • Execution Team 2021-02-08, Execution Team 2021-02-22, Execution Team 2021-03-22, Execution Team 2021-04-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Need to record latency for inserts.

            Assignee:
            Dan Larkin-York
            Reporter:
            Geert Bosch
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: