SERVER-53998 Record latency stats for timeseries inserts